--- a/duration-prediction_me.ipynb
+++ b/duration-prediction_me.ipynb
@@ -12,6 +12,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "b2a29897",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "print(sklearn.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "c984c564",
    "metadata": {},
